Adding proper syntax in index.html file

--- a/home.html
+++ b/home.html
@@ -1,4 +1,5 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html>
 <head>  
 <title>home</title>
 <link rel="stylesheet" type="text/css" href="blog.css">
@@ -7,7 +8,6 @@
 
 <body onload="alert('Welcome!')">
 <header id="header1">
-
 <div class="container">
 <h1>STAR  BEACH  HOTEL</h1>
 </div>
